@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_error_output" errors="5" failures="0" tests="5" time="0.045" hostname="unknown" timestamp="2015-03-03T18:08:41">
+<testsuite name="test_error_output" errors="5" failures="0" tests="5" time="0.051" hostname="unknown" timestamp="2015-03-27T13:16:22">
   <properties/>
   <testcase classname="test_error_output" name="test_special_characters">
     <error><![CDATA[This some special characters: !"§$%&/()=?. Enjoy.
