@@ -1,7 +1,7 @@
 
 ----------------------------------------------------------------------
 mlUnit 1.6.8-SNAPSHOT
-Started: 2015-03-03 18:08:41.
+Started: 2015-03-27 13:16:22.
 Test directory: C:\Users\Alexander\repositories\mlunit\sample\failure_samples
 ----------------------------------------------------------------------
 
@@ -140,24 +140,73 @@ Running suite test_failure_output <<< FAILED
       Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
       Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 110
+  test_equals_object fail:
+    Data not equal:
+      Expected : 
+    Time Series Object: unnamed
+    
+    Time vector characteristics
+    
+          Length                12
+          Start time            0 seconds
+          End time              11 seconds
+    
+    Data characteristics
+    
+          Interpolation method  linear
+          Size                  [1   1  12]
+          Data type             double
+    
+    
+    
+      Actual   : 
+    Time Series Object: unnamed
+    
+    Time vector characteristics
+    
+          Length                12
+          Start time            0 seconds
+          End time              11 seconds
+    
+    Data characteristics
+    
+          Interpolation method  linear
+          Size                  [1   1  12]
+          Data type             double
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 120
+  test_equals_handle fail:
+    Data not equal:
+      Expected : 0
+      Actual   : 1
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135
+  test_equals_functionhandle fail:
+    Data not equal:
+      Expected : @(x)x*x+x
+      Actual   : @(x)x+x*x
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 151
+  test_equals_javaobject fail:
+    Data not equal:
+      Expected : hiho
+      Actual   : hiHo
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 157
   test_not_equals fail:
     Expected and actual are equal.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 115
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 162
   test_error fail:
     Error expected, but none occurred.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 120
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 167
   test_typed_error fail:
     Error expected, but none occurred.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 125
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 172
   test_wrong_typed_error fail:
     Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 129
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 176
   test_warning fail:
     No warning MATLAB:rmpath:DirNotFound when executing function @()3.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 182
   test_implementation_fault error:
     Undefined function or variable 'unknown_function_call'.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 139
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 186
     In C:\Users\Alexander\repositories\mlunit\src\@function_test_case\run_test.m at line 21
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_test.m at line 50
     In C:\Users\Alexander\repositories\mlunit\src\@mlunit_suite_runner\run_suite.m at line 63
@@ -165,15 +214,15 @@ Running suite test_failure_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 36
   test_nested_functions fail:
     Nested function test.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 147
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 143
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 194
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 190
 
 Running suite test_success_output
 
 ----------------------------------------------------------------------
-Executed 29 tests in 0.39s
+Executed 33 tests in 0.49s
 
-22 tests FAILED
+26 tests FAILED
 7 tests had ERRORS
 ======================================================================
 
